--- a/source/Antix.Tests/Antix.Tests.csproj
+++ b/source/Antix.Tests/Antix.Tests.csproj
@@ -109,6 +109,7 @@
     <Compile Include="ToSafeFileNameTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrimEndTests.cs" />
+    <Compile Include="TrimStartTests.cs" />
     <Compile Include="Web\PersistentOutputCacheTests.cs" />
     <Compile Include="Xml\DynamicXmlTests.cs" />
   </ItemGroup>
