service resolver used to resolve and release resources explicitly - use in favor of Func<IService> where dependent is long living eg Singleton

--- a/source/Antix.Services/Antix.Services.csproj
+++ b/source/Antix.Services/Antix.Services.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IServiceResolver.cs" />
     <Compile Include="IService.cs" />
     <Compile Include="IServiceHandler.cs" />
     <Compile Include="IServiceIn.cs" />
