--- a/source/Antix/app.config
+++ b/source/Antix/app.config
@@ -4,12 +4,18 @@
   <configSections>
     <sectionGroup name="applicationSettings"
                   type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="Antix.Logging.LogSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
       <section name="Antix.Properties.Settings"
                type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
                requirePermission="false" />
     </sectionGroup>
   </configSections>
   <applicationSettings>
+    <Antix.Logging.LogSettings>
+      <setting name="Level" serializeAs="String">
+        <value>0</value>
+      </setting>
+    </Antix.Logging.LogSettings>
     <Antix.Properties.Settings>
       <setting name="SecurityHashSalt" serializeAs="String">
         <value />
