--- a/source/Antix.Services/Antix.Services.code.nuspec
+++ b/source/Antix.Services/Antix.Services.code.nuspec
@@ -15,6 +15,7 @@
     <tags>Common Code, Services</tags>
     <dependencies>
       <dependency id="Antix.code" version="$version$"/>
+      <dependency id="Newtonsoft.Json" version="6.0.8" />
     </dependencies>
   </metadata>
   <files>
