--- a/source/Antix.SignalR/Antix.SignalR.code.nuspec
+++ b/source/Antix.SignalR/Antix.SignalR.code.nuspec
@@ -15,6 +15,7 @@
     <tags>Common Code, SignalR</tags>
     <dependencies>
       <dependency id="Microsoft.AspNet.SignalR.Core" version="2.1.2"/>
+      <dependency id="Newtonsoft.Json" version="6.0.8" />
     </dependencies>
   </metadata>
   <files>
