Allow rules to be added as evaluated

--- a/source/.nuget/NuGet.Config
+++ b/source/.nuget/NuGet.Config
@@ -6,6 +6,9 @@
   </solution>
 
   <packageSources>
-    <add key="Local.Nuget" value="..\..\..\antix\nuget\Packages\" />
+
+    <add key="Local.Nuget" value="F:\work\GitHub\antix\source\.nuget\..\..\..\antix\nuget\Packages\" />
+
   </packageSources>
+
 </configuration>
