common static content

--- a/source/Antix.Code.Web/Web.config
+++ b/source/Antix.Code.Web/Web.config
@@ -29,6 +29,37 @@
         </rule>
       </rules>
     </rewrite>
+
+    <staticContent>
+      <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="7.00:00:00" />
+
+      <remove fileExtension=".css" />
+      <remove fileExtension=".js" />
+      <remove fileExtension=".json" />
+      <remove fileExtension=".rss" />
+      <remove fileExtension=".html" />
+      <remove fileExtension=".xml" />
+      <mimeMap fileExtension=".css" mimeType="text/css" />
+      <mimeMap fileExtension=".js" mimeType="application/javascript" />
+      <mimeMap fileExtension=".json" mimeType="application/json" />
+      <mimeMap fileExtension=".rss" mimeType="application/rss+xml; charset=UTF-8" />
+      <mimeMap fileExtension=".html" mimeType="text/html; charset=UTF-8" />
+      <mimeMap fileExtension=".xml" mimeType="application/xml; charset=UTF-8" />
+
+      <remove fileExtension=".m4a" />
+      <mimeMap fileExtension=".m4a" mimeType="audio/mpeg" />
+
+      <remove fileExtension=".svg" />
+      <remove fileExtension=".svgz" />
+      <remove fileExtension=".png" />
+      <remove fileExtension=".woff" />
+      <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+      <mimeMap fileExtension=".svgz" mimeType="image/svg+xml" />
+      <mimeMap fileExtension=".png" mimeType="image/png" />
+      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+
+    </staticContent>
+
   </system.webServer>
   
   <runtime>
